[package]
name = "keyval-kv"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kv = "0.22"
keyval = { path = "../keyval" }
runtime = { git =  "https://github.com/kildevaeld/tasks-rs.git" }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = [ "full" ] }
runtime = { git =  "https://github.com/kildevaeld/tasks-rs.git", features = [ "tokio" ] }
