[package]
name = "keyval"
version = "0.2.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"


[dependencies]
async-trait = "0.1"
async-mutex = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "0.2", features = [ "macros" ] }

[features]
default = [ "memory" ]
memory = [ "async-mutex" ]


[[example]]
name = "keyval"
path = "examples/keyval.rs"
required-features = [ "memory" ]